# PokemonsterClientAndAPI

./: README.md  manage.py  poke_cli.py  poke_cli_tests.py  pyproject.toml  research.md
okpokeapi/: apps.py  models.py  views.py
okpokeapi/migrations/: 0001_initial.py
pokemania/: asgi.py  settings.py  urls.py  wsgi.py
